samples/_failures_safe/1761515844_0def8a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5d0dc122.c: In function ‘display_high_severity’:
./samples/SAFE/__tmp_5d0dc122.c:125:9: error: expected expression at end of input
  125 |         if (analyzer->entries[i].severity >=
      |         ^~
./samples/SAFE/__tmp_5d0dc122.c:125:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_5d0dc122.c:125:9: error: expected declaration or statement at end of input
